cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Craig Hupin
maintainer:         althar93@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Common,
                      Parser,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Day7,
                      Day8,
                      Day9,
                      Day10,
                      Day11, 
                      Day12,
                      Day13,
                      Day14,
                      Day15,
                      Day16,
                      Day17,
                      Day18

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      time,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010
